Added gulp tasks

--- a/test/test.html
+++ b/test/test.html
@@ -211,7 +211,7 @@
     </div>
   </div>
   <!-- Attach scripts. -->
-  <script src="../js/riccio.js"></script>
+  <script src="../dist/riccio.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
