--- a/test/test.html
+++ b/test/test.html
@@ -8,206 +8,208 @@
   <link href="style.css" rel="stylesheet" media="all">
 </head>
 <body>
-  <h1>Riccio</h1>
-  <p>Testing riccio script.</p>
-  <div class="album-view">
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-        <li>Track #9</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-        <li>Track #9</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-        <li>Track #9</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-      </ul>
-    </div>
-    <div class="album">
-      <img src="" />
-      <h2 class="title">Album title</h2>
-      <ul class="track-list">
-        <li>Track #1</li>
-        <li>Track #2</li>
-        <li>Track #3</li>
-        <li>Track #4</li>
-        <li>Track #5</li>
-        <li>Track #6</li>
-        <li>Track #7</li>
-        <li>Track #8</li>
-        <li>Track #9</li>
-      </ul>
+  <div class="wrapper-page">
+    <h1>Riccio</h1>
+    <p>Testing riccio script.</p>
+    <div class="album-view">
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
     </div>
   </div>
   <!-- Attach scripts. -->
