Shims, gulp-cancat, camelCase

--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
   <title>Riccio</title>
   <meta charset="utf-8">
   <!-- Attach stylesheets. -->
-  <link href="../styles/css/riccio.css" rel="stylesheet" media="all">
+  <link href="../dist/riccio.css" rel="stylesheet" media="all">
   <link href="style.css" rel="stylesheet" media="all">
 </head>
 <body>
@@ -213,7 +213,7 @@
     </div>
   </div>
   <!-- Attach scripts. -->
-  <script src="../js/riccio.js"></script>
+  <script src="../dist/riccio.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
