Init via HTML, getStore() function, publish to NPM

--- a/test/test.html
+++ b/test/test.html
@@ -4,14 +4,216 @@
   <title>Riccio</title>
   <meta charset="utf-8">
   <!-- Attach stylesheets. -->
-  <link href="../dist/riccio.css" rel="stylesheet" media="all">
+  <link href="../styles/css/riccio.css" rel="stylesheet" media="all">
   <link href="style.css" rel="stylesheet" media="all">
 </head>
 <body>
   <div class="wrapper-page">
     <h1>Riccio</h1>
     <p>Testing riccio script.</p>
+    <p>Init via script.</p>
     <div class="album-view">
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+        </ul>
+      </div>
+      <div class="album">
+        <img src="#" />
+        <h2 class="title">Album title</h2>
+        <ul class="track-list">
+          <li>Track #1</li>
+          <li>Track #2</li>
+          <li>Track #3</li>
+          <li>Track #4</li>
+          <li>Track #5</li>
+          <li>Track #6</li>
+          <li>Track #7</li>
+          <li>Track #8</li>
+          <li>Track #9</li>
+        </ul>
+      </div>
+    </div>
+    <p>Init via HTML.</p>
+    <div class="album-view" data-riccio='{ "itemSelector": ".album", "popSelector": ".track-list", "mediaQueries": false }'>
       <div class="album">
         <img src="#" />
         <h2 class="title">Album title</h2>
@@ -213,7 +415,7 @@
     </div>
   </div>
   <!-- Attach scripts. -->
-  <script src="../dist/riccio.js"></script>
+  <script src="../js/riccio.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
