UMD, improved gulpfile.js, refactor test folder

--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- Attach stylesheets. -->
   <link href="../styles/css/riccio.css" rel="stylesheet" media="all">
-  <link href="style.css" rel="stylesheet" media="all">
+  <link href="styles/css/style.css" rel="stylesheet" media="all">
 </head>
 <body>
   <div class="wrapper-page">
@@ -416,6 +416,6 @@
   </div>
   <!-- Attach scripts. -->
   <script src="../js/riccio.js"></script>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
