Improved MediaQueryList handling, added mediaQueryHandler()

--- a/test/index.html
+++ b/test/index.html
@@ -213,7 +213,7 @@
       </div>
     </div>
     <p>Init via HTML.</p>
-    <div class="album-view" data-riccio='{ "itemSelector": ".album", "popSelector": ".track-list", "mediaQueries": false }'>
+    <div class="album-view" data-riccio='{ "itemSelector": ".album", "popSelector": ".track-list", "mediaQueries": true }'>
       <div class="album">
         <img src="#" />
         <h2 class="title">Album title</h2>
